Fixed settings and editor collapse/expand animation blicking on first render (#480)
* fix: animation for settings and editor is added by root attributes

* chore: minor refactoring

--- a/src/core/base/root.less
+++ b/src/core/base/root.less
@@ -22,6 +22,31 @@
       'preview'
       'editor';
   }
+
+  &[editor-collapsed] > .uip-editor {
+    max-height: 0;
+
+    &-inner {
+      visibility: hidden;
+      transition:  visibility 0s .3s;
+    }
+  }
+  
+  &[settings-collapsed] > .uip-settings {
+    max-width: 0;
+
+    &-inner {
+      visibility: hidden;
+      transition: visibility 0s .3s;
+    }
+
+    @media @mobile {
+      max-height: 0;
+      max-width: 100%;
+
+      .scrollbar-collapsed();
+    }
+  }
 }
 
 .uip-alert-info {
