--- a/src/plugins/editor/editor.less
+++ b/src/plugins/editor/editor.less
@@ -9,13 +9,4 @@
     height: 100%;
     border-top: 1px solid @section-border;
   }
-
-  &.collapsed {
-    max-height: 0;
-
-    &-inner {
-      visibility: hidden;
-      transition:  visibility 0s .3s;
-    }
-  }
 }
